# mcp-toolkit

./: Cargo.toml  Dockerfile  LICENSE  README.md  README_INIT.md  docker-compose.yml
.agents/skills/testing-surfsense-e2b-mcp/: SKILL.md
examples/: mcp.json  python_agent.py  typescript_agent.ts
src/: client.rs  config.rs  error.rs  jsonrpc.rs  lib.rs  main.rs  manager.rs  types.rs
src/registry/: builtin.rs  mod.rs  remote.rs
src/server/: http_server.rs  mod.rs
src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
