[package]
name = "mcp-toolkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Autonomous, self-foraging MCP toolkit for AI agents — isolated from temm1e"
repository = "https://github.com/itsablabla/mcp-toolkit"

[[bin]]
name = "mcp-toolkit"
path = "src/main.rs"

[lib]
name = "mcp_toolkit"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros", "rt-multi-thread", "signal"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
tokio-stream = "0.1"
bytes = "1"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[features]
default = ["stdio", "http", "sse", "registry", "server", "cli"]
stdio = []
http = []
sse = []
registry = []
server = ["dep:axum", "dep:tower", "dep:tower-http"]
cli = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
